# random_oracle

./: .gitignore  .mailmap  LICENSE.txt  Makefile  NEW_METHOD.md  PROJECT.md  README.md  pyproject.toml  setup.py
analyse/: into_fp8.py  reg-share.py  run_llama_70b.sh  run_openrouter.sh  serve.sh
analyse/pre_training_distribution/: calc_kl_divergence.py  direct_claude-4-sonnet.json  direct_gpt-4.1.json  pre_training_distribution.py  sequence_claude-4-sonnet.json  state_name_distribution.json  test_cal.py  vs_claude-4-sonnet.json  vs_gpt-4.1.json
data/: book.txt  creative_story.txt  gsm8k.txt  joke.txt  lcb.txt  poem.txt  poem_titles.txt  rand_num.txt  safety.txt  safety_harmbench.txt  simple_qa.txt  speech.txt  state_name.json  state_name.txt  state_name_CoverageQA.json  state_name_CoverageQA.txt  synthetic_negative.txt  synthetic_negative_new.txt
examples/: 01_quick_start.py  02_basic_usage.py  03_transforms.py  04_recipes.py  05_research_api.py  README.md  demo_safety_usage.py  plan.md  simple_api.py
experiments/prompt_entropy_jokes/: pipeline_report.html
notebooks/: framework_demo.ipynb  vs_base.ipynb  vs_with_image.ipynb
reports/: prompt_entropy_joke_experiment.md
scripts/: EXPERIMENTS.md  gen.sh  load_harmbench_data.py  run.sh
scripts/ablation/: analyse_probs.py  run_min_p_ablation.py  run_num_samples_ablation.py  run_pre_training_distribution.py  run_sampling_ablation.py  run_sampling_candidates_ablation.py  run_sampling_comparison.py  run_top_p_ablation.py
scripts/analysis/: analyze_dialogue_results.py  plot_max_diversity.py
scripts/data_processing/: create_seed_data.py  filter_responses.py  load_harmbench_data.py  process_aime_dataset.py  process_gsm8k_dataset.py  push_checkpoints_to_hf.py
scripts/migration/: migrate_method_names.py
scripts/tasks/: run_bias_task_coverageqa.py  run_bias_task_general.py  run_dialogue_simulation.py  run_jokes.py  run_jokes_local.py  run_math_local.py  run_math_simple.py  run_negative.py  run_poem.py  run_poem_test.py  run_positive_amc_aime.py  run_positive_gsm8k.py  run_positive_lcb.py  run_prompt_entropy.py  run_rng.py  run_safety.py  run_safety_local.py  run_simple_qa.py  run_state_name.py  run_story.py  run_story_gpu.py
verbalized_sampling/: __init__.py  api.py  cli.py  pipeline.py  selection.py
verbalized_sampling/analysis/: dialogue_plots.py  plots.py  plotting.py
verbalized_sampling/evals/: accuracy.py  safety.py
verbalized_sampling/examples/: evaluation_demo.py  tasks_demo.py
(+146 files in other folders)
